Fixed z-index issue in stepper navigation

--- a/src/modules/stepper_navigation/stepper_navigation.scss
+++ b/src/modules/stepper_navigation/stepper_navigation.scss
@@ -199,6 +199,9 @@ $stepperNavigationCurves: (
     }
 
     &--multiple {
+      position: relative;
+      z-index: $zIndexOverlays;
+
       &[ data-stepper_navigation='multipleBefore' ] {
         svg use {
           fill: $colorCyan;
